--- a/src/app/scss/_helpers.scss
+++ b/src/app/scss/_helpers.scss
@@ -172,6 +172,10 @@
   padding-bottom: 10px;
 }
 
+.vertical-align-super {
+  vertical-align: super;
+}
+
 .nowrap {
   white-space: nowrap;
 }
@@ -311,5 +315,3 @@ input[type=number]
 input[type="file"] {
   display: none;
 }
-
-
